fix frontend: tasks word wrap so super long stuff DOES NOT break out

--- a/src/serve/styles/authed.tasks.css
+++ b/src/serve/styles/authed.tasks.css
@@ -51,6 +51,9 @@ div#tasks h1 {
   animation-duration: 500ms;
 
   cursor: pointer;
+
+  max-width: inherit;
+  word-wrap: break-word;
 }
 
 .task.TaskPopout {
